<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">萌脸丽萨</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="blend">融合</string>   
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="crop">裁剪</string>
    <string name="rotate">旋转</string>
    <string name="rotate_left">向左旋转</string>
    <string name="rotate_right">向右旋转</string>
    <string name="reverse_transform">反转</string>
    <string name="resize">缩放</string>
    <string name="tone">调色</string>
    <string name="saturation">饱和度</string>
    <string name="lightness">亮度</string>
    <string name="contrast">色相</string>
    <string name="frame_doodle">边框涂鸦</string>
    <string name="frame">边框</string>
    <string name="doodle">涂鸦</string>
    <string name="running_face_detection">请稍等</string>
    <string name="multiface_crop_help">"轻点一张脸开始裁剪。"</string>
    <string name="saving_image">"正在保存照片..."</string>
    <string name="choose_img">请选择图片</string>
    <string name="load_failure">图片加载失败</string>
    <string name="resize_one_to_two">"1 to 2"</string>
    <string name="resize_one_to_three">"1 to 3"</string>
    <string name="resize_one_to_four">"1 to 4"</string>
    <string name="save_bitmap">正在保存图片...</string>
    <string name="no_found">没有找到图片哦</string>
    <string name="specific">特效</string>
    <string name="handling">处理中，请稍候...</string>
    <string-array name="specific_item">
        <item>怀旧</item>
        <item>模糊</item>
        <item>锐化</item>
        <item>叠加</item>
        <item>底片</item>
        <item>浮雕</item>
        <item>光照</item>
        <item>霓虹</item>
        <item>重叠</item>
    </string-array>

</resources>
