<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
	    android:orientation="vertical"
        >
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit"
            android:text="@string/edit"
            android:onClick="onClick"
            />
            
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tone"
            android:text="@string/tone"
            android:onClick="onClick"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/frame_doodle"
            android:text="@string/frame_doodle"
            android:onClick="onClick"
            />
        
    </LinearLayout>
    
</ScrollView>
