<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:onClick="onClick"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            android:text="@string/save"
            android:onClick="onClick"
            android:layout_alignParentRight="true"
            />
        
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.0"
        >
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tone_img"
            android:layout_gravity="center"
            />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0"
        >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            
            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="@string/saturation"
                android:gravity="center"
                />
            
	        <SeekBar
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:id="@+id/saturation"
	            android:max="255"
	            android:progress="127"
	            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            
            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="@string/lightness"
                android:gravity="center"
                />
            
	        <SeekBar
	            android:layout_width="250dp"
	            android:layout_height="wrap_content"
	            android:id="@+id/lightness"
	            android:max="255"
	            android:progress="127"
	            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            
            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="@string/contrast"
                android:gravity="center"
                />
            
	        <SeekBar
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:id="@+id/contrast"
	            android:max="255"
	            android:progress="127"
	            />
        </LinearLayout>
        
    </LinearLayout>
    
</LinearLayout>
